<resources>
    <string name="app_name">IK2002 Project</string>
    <string name="title">Secure Lan Chat App</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_chat">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_password">Enter your password</string>
    <string name="btn_generate">Generate Key</string>
    <string name="enter_peer_name">Enter peer name</string>
    <string name="enter_server_ip">Enter server IP</string>
    <string name="btn_contact">Contact</string>
    <string name="btn_send">Send</string>
    <string name="lbl_message">Message</string>
    <string name="action_close_conversation">Close Conversation</string>
    <string name="action_delete_key">Delete Key</string>
    <string name="title_activity_chat">Conversation</string>
    <string name="title_activity_initial_screen">Create Private Key</string>
    <string name="title_activity_information">Information</string>
    <string name="title_information_page">Academic assignment</string>
    <string name="course_id">IK2002</string>
    <string name="authors">Authors:</string>
    <string name="author1">Antonios Kouzoupis antkou@kth.se</string>
    <string name="author2">Nikolaos - Ektoras Anestos anestos@kth.se</string>
    <string name="month">March 2015</string>

</resources>

