<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ik2002.project.ik2002.Information"
    android:background="@color/actionbar"
    android:id="@+id/layoutId">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/course_id"
        android:id="@+id/textView"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_information_page"
        android:id="@+id/textView5"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/authors"
        android:id="@+id/textView4"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/textView5"
        android:textColor="@color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/author1"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView4"
        android:textColor="@color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/author2"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:textColor="@color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/month"
        android:id="@+id/textView6"
        android:textColor="@color/white"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/kth"
        android:padding="5dp"
        android:background="#ffffff"
        android:layout_above="@+id/textView6"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
